@@ -297,7 +297,9 @@ This release contains contributions from (alphabetically by first name):
  - *netinstall* now has a new *noncheckable* option for groups, which prevent
    it a group from being checked/uncheckd as a whole. You can still check
    individual items **in** the group though. (thanks Shivanand)
-- *partition* can now pick LUKS or LUKS2. (thanks Jeremy)
+ - *partition* can now pick LUKS or LUKS2. (thanks Jeremy)
+ - *zfs* creates a hostid through zgenhostid.
+ - *zfshostid* new module to copy zfs generated /etc/hostid
 
 
 # 3.3.0-alpha2 (2022-08-23)
